# tx-indexer

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
service/: Cargo.toml
service/sql_scripts/processed_blocks/: insert_row.sql  select_next_block.sql  table_create.sql  table_delete.sql
service/sql_scripts/transaction_histories/: insert_row.sql  select_by_hash.sql  select_related_by_time.sql  table_create.sql  table_delete.sql
service/src/: logger.rs  main.rs  metadata.rs
service/src/entities/: mod.rs  processed_blocks.rs  transaction_histories.rs
service/src/metadata/: goro.rs  mod.rs  nagara.rs  scraps.rs
service/src/services/: endpoints.rs  mod.rs  updater.rs
service/src/services/updater/: mod.rs  transient_worker.rs
sql/: create_table_if_not_exists.sql  insert_into.sql  select_by_account.sql
src/: config.rs  endpoints.rs  logger.rs  main.rs  metadata.rs  processor.rs  wrapper.rs
