[workspace.package]
authors = [
    "goro-network Developers <https://github.com/goro-network>",
    "Aditya Kresna <kresna@gemtek.id>",
]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/goro-network/tx-indexer"
version = "1.0.0-alpha.10"

[workspace]
members = ["service"]

[patch.crates-io]
sp-core = { git = "https://github.com/goro-network/substrate.git", branch = "goro-network-v1.0.0-alpha" }
sp-core-hashing = { git = "https://github.com/goro-network/substrate.git", branch = "goro-network-v1.0.0-alpha" }
sp-runtime = { git = "https://github.com/goro-network/substrate.git", branch = "goro-network-v1.0.0-alpha" }
ss58-registry = { git = "https://github.com/goro-network/ss58-registry", rev = "30889d6" }
