[workspace.package]
authors = [
    "nagara Network Developers <https://github.com/nagara-network>",
    "Aditya Kresna <kresna@gemtek.id>",
]
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/nagara-network/tx-indexer"
version = "1.0.0-alpha.12"

[workspace]
resolver = "2"
members = ["service"]

[patch.crates-io]
sp-core = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-core-hashing = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sp-runtime = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
ss58-registry = { git = "https://github.com/nagara-network/ss58-registry", rev = "0038a88" }
