[package]
name = "goro-tx-indexer"
description = "GoRo Network - Transaction Indexer Service"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["arbitrary", "serde"] }
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_info", "serde"] }
mimalloc = { version = "0.1.37", default-features = false, features = [
    "local_dynamic_tls",
    "override",
] }
parity-scale-codec = { version = "3.6.4", features = ["full"] }
rand = "0.8.5"
scale-info = { version = "2.9.0", features = ["serde", "derive", "decode", "schema", "schemars"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = { version = "1.0.103", features = ["arbitrary_precision"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
ss58-registry = { git = "https://github.com/goro-network/ss58-registry", rev = "899ca6d" }
sqlx = { version = "0.7.1", default-features = false, features = [
    "any",
    "bit-vec",
    "chrono",
    "macros",
    "migrate",
    "regexp",
    "runtime-tokio-rustls",
    "sqlite",
] }
subxt = "0.29.0"
tokio = { version = "1.29.1", features = ["full"] }
