[package]
name = "nagara-tx-indexer"
description = "nagara Network - Transaction Indexer Service"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", features = ["rustls"] }
anyhow = "1.0.72"
bigdecimal = { version = "0.4.1", features = ["serde"] }
chrono = { version = "0.4.26", features = ["arbitrary", "serde"] }
env_logger = "0.10.0"
futures = "0.3.28"
hex = "0.4.3"
log = { version = "0.4.19", features = ["max_level_debug", "release_max_level_info", "serde"] }
mimalloc = { version = "0.1.37", default-features = false, features = [
    "local_dynamic_tls",
    "override",
] }
parity-scale-codec = { version = "3.6.4", features = ["full"] }
rand = "0.8.5"
scale-info = { version = "2.9.0", features = ["serde", "derive", "decode", "schema", "schemars"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = { version = "1.0.103", features = ["arbitrary_precision"] }
sp-core = { git = "https://github.com/nagara-network/substrate.git", branch = "nagara-network-v1.0.0-alpha" }
sqlx = { version = "0.7.1", default-features = false, features = [
    "any",
    "bit-vec",
    "chrono",
    "macros",
    "migrate",
    "regexp",
    "runtime-tokio-rustls",
    "sqlite",
] }
ss58-registry = { git = "https://github.com/goro-network/ss58-registry", rev = "0038a88" }
subxt = { version = "0.31.0", features = [
    "sp-core",
    "sp-runtime",
    "tokio-stream",
    "substrate-compat",
] }
tokio = { version = "1.29.1", features = ["full"] }
